--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,20 @@
+pandas
+numpy
+scikit-learn
+
 torch
 torchaudio
 
+soundfile
+
 tokenizers
 transformers
-
-pandas
-numpy
+torchmetrics
 
 matplotlib
 seaborn
 
 tqdm
 
-soundfile
+
+
